WSW34-86 : Applications Regeneration

--- a/apps/wifi_bypass_demos/firmware/src/config/sam_e54_xpro_winc3400_freertos/sam_e54_xpro_winc3400_freertos.mhc/settings.yml
+++ b/apps/wifi_bypass_demos/firmware/src/config/sam_e54_xpro_winc3400_freertos/sam_e54_xpro_winc3400_freertos.mhc/settings.yml
@@ -10,5 +10,5 @@ settings:
   FORCE_OPTIMIZATION: 'false'
   GENERATE_BACKUP: 'true'
   MERGE_STRATEGY: USER_ALL
-  PackageFilter: bsp;core;crypto;csp;dev_packs;net;quick_docs;usb;wireless_apps_winc3400;wireless_wifi
+  PackageFilter: bsp;core;crypto;cryptoauthlib;csp;dev_packs;net;quick_docs;usb;wireless_apps_winc3400;wireless_wifi
   TRUSTZONE: 'false'
