--- a/apps/power_save_mode_example/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/settings.yml
+++ b/apps/power_save_mode_example/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/settings.yml
@@ -5,7 +5,7 @@ frameworkPath: ../../..
 processor: ATSAME54P20A
 projectName: ''
 settings:
-  PackageFilter: bsp;core;crypto;csp;dev_packs;net;quick_docs;usb;wireless_apps_winc3400;wireless_wifi
+  PackageFilter: bsp;core;crypto;cryptoauthlib;csp;dev_packs;net;quick_docs;usb;wireless_apps_winc3400;wireless_wifi
   FORCE_OPTIMIZATION: 'false'
   GENERATE_BACKUP: 'true'
   CMSISPath: .\dev_packs\arm\CMSIS\5.8.0
