--- a/apps/tcp_client/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/sercom4.yml
+++ b/apps/tcp_client/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/sercom4.yml
@@ -271,6 +271,13 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
+  - type: String
+    attributes: {id: USART_DATA_BITS}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: sercom4, value: DRV_USART_DATA_8_BIT}
   - type: KeyValueSet
     attributes: {id: USART_FORM}
     children:
@@ -284,6 +291,13 @@ children:
       children:
       - type: Dynamic
         attributes: {id: sercom4, value: '0'}
+  - type: Boolean
+    attributes: {id: USART_INTERRUPT_MODE_ENABLE}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: sercom4, value: 'true'}
   - type: Boolean
     attributes: {id: USART_LIN_MASTER_SUPPORTED}
     children:
@@ -309,6 +323,13 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
+  - type: Boolean
+    attributes: {id: USART_RING_BUFFER_MODE_ENABLE}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: sercom4, value: 'false'}
   - type: Boolean
     attributes: {id: USART_RUNSTDBY}
     children:
