--- a/apps/wifi_provisioning_via_softap/firmware/src/config/sam_d21_xpro_winc3400/sam_d21_xpro_winc3400.mhc/sercom0.yml
+++ b/apps/wifi_provisioning_via_softap/firmware/src/config/sam_d21_xpro_winc3400/sam_d21_xpro_winc3400.mhc/sercom0.yml
@@ -262,6 +262,13 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
+  - type: String
+    attributes: {id: USART_DATA_BITS}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: sercom0, value: DRV_USART_DATA_8_BIT}
   - type: KeyValueSet
     attributes: {id: USART_FORM}
     children:
@@ -275,6 +282,13 @@ children:
       children:
       - type: Dynamic
         attributes: {id: sercom0, value: '0'}
+  - type: Boolean
+    attributes: {id: USART_INTERRUPT_MODE_ENABLE}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: sercom0, value: 'true'}
   - type: Boolean
     attributes: {id: USART_LIN_MASTER_SUPPORTED}
     children:
@@ -309,6 +323,13 @@ children:
         attributes: {id: label}
         children:
         - {type: Value, value: '---'}
+  - type: Boolean
+    attributes: {id: USART_RING_BUFFER_MODE_ENABLE}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: sercom0, value: 'false'}
   - type: Boolean
     attributes: {id: USART_RUNSTDBY}
     children:
