--- a/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/FreeRTOS.yml
+++ b/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/FreeRTOS.yml
@@ -4,24 +4,13 @@ attributes: {id: FreeRTOS}
 children:
 - type: Symbols
   children:
-  - type: File
-    attributes: {id: FREERTOS_HEAP_1_C}
+  - type: Integer
+    attributes: {id: FREERTOS_CPU_CLOCK_HZ}
     children:
-    - type: Attributes
+    - type: Values
       children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'true'}
-  - type: File
-    attributes: {id: FREERTOS_HEAP_2_C}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: enabled}
-        children:
-        - {type: Value, value: 'false'}
+      - type: Dynamic
+        attributes: {id: FreeRTOS, value: '120000000'}
   - type: Combo
     attributes: {id: FREERTOS_MEMORY_MANAGEMENT_CHOICE}
     children:
