--- a/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/core.yml
+++ b/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/core.yml
@@ -2593,6 +2593,27 @@ children:
       - type: Dynamic
         attributes: {id: core, value: '1000'}
   - type: Boolean
+    attributes: {id: SYSTICK_PUBLISH_CAPABILITIES}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: 'false'}
+  - type: String
+    attributes: {id: SYSTICK_SYS_TIME_COMPONENT_ID}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: None}
+  - type: Boolean
+    attributes: {id: SYSTICK_USED_BY_SYS_TIME}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: 'false'}
+  - type: Boolean
     attributes: {id: SysTick_INTERRUPT_ENABLE}
     children:
     - type: Values
@@ -2676,6 +2697,13 @@ children:
       children:
       - type: Dynamic
         attributes: {id: tc3, value: 'true'}
+  - type: Boolean
+    attributes: {id: USE_SYSTICK_INTERRUPT}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: 'false'}
   - type: Setting
     attributes: {id: XC32_HEAP}
     children:
@@ -2703,5 +2731,9 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'false'}
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: 'false'}
 - type: ElementPosition
   attributes: {x: '400', y: '20', id: core}
