--- a/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/drv_spi.yml
+++ b/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/drv_spi.yml
@@ -4,6 +4,24 @@ attributes: {id: drv_spi}
 children:
 - type: Symbols
   children:
+  - type: File
+    attributes: {id: DRV_SPI_ASYNC_HEADER_LOCAL}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: enabled}
+        children:
+        - {type: Value, value: 'true'}
+  - type: File
+    attributes: {id: DRV_SPI_ASYNC_SOURCE}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: enabled}
+        children:
+        - {type: Value, value: 'true'}
   - type: Combo
     attributes: {id: DRV_SPI_COMMON_MODE}
     children:
@@ -13,6 +31,24 @@ children:
         attributes: {id: drv_spi, value: Synchronous}
       - type: User
         attributes: {value: Asynchronous}
+  - type: File
+    attributes: {id: DRV_SPI_SYNC_HEADER_LOCAL}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: enabled}
+        children:
+        - {type: Value, value: 'false'}
+  - type: File
+    attributes: {id: DRV_SPI_SYNC_SOURCE}
+    children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: enabled}
+        children:
+        - {type: Value, value: 'false'}
   - type: Boolean
     attributes: {id: DRV_SPI_SYS_DMA_CODE_ENABLE}
     children:
@@ -64,6 +100,15 @@ children:
           children:
           - type: Dynamic
             attributes: {id: drv_spi_0, value: SERCOM4}
+      - type: Integer
+        attributes: {id: DRV_SPI_QUEUE_SIZE}
+        children:
+        - type: Attributes
+          children:
+          - type: Boolean
+            attributes: {id: visible}
+            children:
+            - {type: Value, value: 'true'}
       - type: Integer
         attributes: {id: DRV_SPI_RX_DMA_CHANNEL}
         children:
