--- a/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/sys_time.yml
+++ b/apps/wifi_socket_demos/firmware/src/config/sam_e54_xpro_winc3400/sam_e54_xpro_winc3400.mhc/sys_time.yml
@@ -12,7 +12,7 @@ children:
       - type: Boolean
         attributes: {id: visible}
         children:
-        - {type: Value, value: 'true'}
+        - {type: Value, value: 'false'}
   - type: String
     attributes: {id: SYS_TIME_PLIB}
     children:
@@ -26,16 +26,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: sys_time, value: tc3}
-  - type: Boolean
-    attributes: {id: SYS_TIME_USE_SYSTICK}
-    children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: visible}
-        children:
-        - {type: Value, value: 'false'}
+        attributes: {id: sys_time, value: ''}
 - type: Attachments
   children:
   - type: DirectDependency
