--- a/apps/wifi_tcp_server_in_softap/firmware/src/config/sam_e54_xpro_winc3400/harmony-manifest-success.yml
+++ b/apps/wifi_tcp_server_in_softap/firmware/src/config/sam_e54_xpro_winc3400/harmony-manifest-success.yml
@@ -4,7 +4,7 @@
 
 
 project: wifi_tcp_server_in_softap
-creation_date: 2023-02-27T08:39:03.028+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+creation_date: 2023-02-27T14:08:45.559+05:30[Asia/Calcutta]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
 operating_system: Windows 10
 mhc_mode: Standalone            # [IDE|Standalone|Headless]
 mhc_version: v3.8.5
@@ -17,7 +17,7 @@ modules:
     - {name: "wireless_wifi", version: "v3.7.2"}
     - {name: "core", version: "v3.11.1"}
     - {name: "dev_packs", version: "v3.15.1"}
-    - {name: "wireless_apps_winc1500", version: "unknown"}
-    - {name: "wireless_apps_winc3400", version: "unknown"}
+    - {name: "wireless_apps_winc1500", version: "v3.7.0"}
+    - {name: "wireless_apps_winc3400", version: "v3.6.0"}
     - {name: "bsp", version: "v3.13.0"}
 
