--- a/apps/power_save_mode_example/firmware/src/config/sam_d21_xpro_winc3400/harmony-manifest-success.yml
+++ b/apps/power_save_mode_example/firmware/src/config/sam_d21_xpro_winc3400/harmony-manifest-success.yml
@@ -14,9 +14,9 @@ compiler: xc32
 
 modules:
     - {name: "csp", version: "v3.15.0"}
-    - {name: "wireless_wifi", version: "v3.7.2"}
+    - {name: "wireless_wifi", version: "v3.8.0"}
     - {name: "core", version: "v3.11.1"}
     - {name: "dev_packs", version: "v3.15.1"}
-    - {name: "wireless_apps_winc1500", version: "unknown"}
-    - {name: "wireless_apps_winc3400", version: "unknown"}
+    - {name: "wireless_apps_winc1500", version: "v3.7.0"}
+    - {name: "wireless_apps_winc3400", version: "v3.6.0"}
 
